# rPiTempStation

./: CMakeLists.txt  main.cpp
libraries/common/: CMakeLists.txt  common.h
libraries/ipc/: CMakeLists.txt  gr_ipc.cpp  gr_ipc.h
modules/cpu_temp/: CMakeLists.txt  cpu_temp.cpp  cpu_temp.h
modules/sht31d/: CMakeLists.txt  sht31d.cpp  sht31d.h
tools/file_log/: CMakeLists.txt  file_log.cpp
tools/monitor/: CMakeLists.txt  monitor.cpp  ui_defs.h
webserver/: .gitignore  create_ssl_cert.sh  error.html  index.html  index.js  package.json
